syntax="proto3";

option go_package="/gen";

package api;


service MetadataService{
  rpc GetMetadata(GetMetadataRequest) returns (GetMetadataResponse);
  rpc AddMetadata(AddMetadataRequest) returns (AddMetadataResponse);
}

message GetMetadataRequest{
 string id = 1;
}

message GetMetadataResponse{
 Metadata metadata= 1;
}

message AddMetadataRequest {
 Metadata metadata = 1;
}

message AddMetadataResponse{
}

message Metadata{
 string id = 1;
 string title = 2;
 string description = 3;
 string author = 4;
 string publishing_year = 5;
 string publishing_company=6;
}

service Rating{
 rpc GetAggregatedRating(GetAggregatedRatingRequest) returns (GetAggregatedRatingResponse);
 rpc AddRating(AddRatingRequest) returns (AddRatingResponse);
}

message GetAggregatedRatingRequest{
 string record_id = 1;
 int32 record_type = 2;
}

message GetAggregatedRatingResponse{
 double rating_value = 1;
}

message AddRatingRequest{
 string user_id = 1;
 string record_id = 2;
 int32 record_type = 3;
 int32 rating_value = 4;
}

message AddRatingResponse{
}

service Book{
 rpc GetBook(GetBookRequest) returns (GetBookResponse);
}
message GetBookRequest{
 string movie_id = 1;
}

message GetBookResponse{
  BookDetails book = 1;
}

message BookDetails{
 double rating = 1;
 Metadata metadata = 2;
}